--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+blinker==1.8.2
 click==8.1.7
-Flask==1.1.2
+Flask==3.0.3
+importlib_metadata==7.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 python-dotenv==0.19.2
 Werkzeug==3.0.3
+zipp==3.19.0
